<resources>
    <string name="app_name">TiTi</string>
    <string name="edt_mat_khau">Mật khẩu</string>
    <string name="txt_email_phone">Email / Số điện thoại</string>
    <string name="txt_mat_khau">Mật khẩu</string>
    <string name="txt_dang_nhap">Đăng nhập</string>
    <string name="txt_quen_mk">Quên mật khẩu</string>
    <string name="txt_hien">Hiện</string>
    <string name="txt_lay_mk">Lấy lại mật khẩu</string>
    <string name="txt_nhac_nho_lay_mk">Vui lòng cung cấp email hoặc số điện thoại đăng nhập để lấy lại mật khẩu</string>
    <string name="txt_an">Ẩn</string>
    <string name="txt_dang_ky">Đăng ký</string>
    <string name="txt_email">Email</string>
    <string name="txt_ho_ten">Họ tên</string>
    <string name="txt_so_dien_thoai">Số điện thoại</string>
    <string name="txt_gt_nam">Nam</string>
    <string name="txt_gt_nu">Nữ</string>
    <string name="txt_nhan_email">Nhận các thông tin và chương trình khuyến mãi của TiTi qua email.</string>
    <string name="txt_ngay_sinh">Ngày sinh</string>
    <string name="txt_nhap_day_du_tt">Nhập đầy đủ thông tin</string>
    <string name="txt_trang_chu">Trang chủ</string>
    <string name="txt_danh_muc">Danh mục</string>
    <string name="txt_tim_kiem">Tìm kiếm</string>
    <string name="txt_thong_bao">Thông báo</string>
    <string name="txt_ca_nhan">Cá nhân</string>
    <string name="txt_nha_sach">Nhà sách</string>
    <string name="txt_san_pham_moi">Sản phẩm mới</string>
    <string name="txt_tat_ca_san_pham">Tất cả sản phẩm</string>
    <string name="txt_chon_mua">Chọn mua</string>
    <string name="txt_mo_ta">Mô tả</string>
    <string name="txt_thong_so">Thông số</string>
    <string name="txt_thong_tin_chi_tiet">Thông tin chi tiết</string>
    <string name="txt_thanh_tien">Thành tiền</string>
    <string name="txt_thanh_toan">Thanh toán</string>
    <string name="txt_cap_nhat">Cập nhật</string>
    <string name="txt_chao_mung">Chào mừng bạn đến với TiTi</string>
    <string name="txt_dang_nhap_dang_ky">Đăng nhập/Đăng ký</string>
    <string name="txt_thanh_vien_tu">Thành viên từ:</string>
    <string name="txt_dang_xuat">Đăng xuất</string>
    <string name="txt_san_pham_da_mua">Sản phẩm đã mua</string>
    <string name="txt_san_pham_da_xem">Sản phẩm đã xem</string>
    <string name="txt_san_pham_yeu_thich">Sản phẩm yêu thích</string>
    <string name="txt_san_pham_mua_sau">Sản phẩm mua sau</string>
    <string name="txt_san_pham_da_danh_gia">Sản phẩm đã đánh giá</string>
    <string name="txt_xac_nhan">Xác nhận</string>
    <string name="txt_ghi_chu">Nội dung ghi chú</string>
    <string name="txt_dia_chi_giao">Địa chỉ giao hàng</string>
    <string name="txt_san_pham">Sản phẩm</string>
    <string name="txt_chi_tiet_san_pham">Chi tiết sản phẩm</string>
    <string name="txt_gio_hang">Giỏ hàng</string>
    <string name="txt_danh_muc_san_pham">Danh mục sản phẩm</string>
    <string name="txt_ban_tim_gi">Bạn tìm gì</string>
    <string name="txt_lich_su_tim_kiem">Lịch sử tìm kiếm</string>
    <string name="txt_xoa_lich_su">Xóa lịch sử</string>
    <string name="txt_ban_chua_nhap_gi">Bạn chưa nhập gì</string>
    <string name="txt_ket_qua">Kết quả</string>
    <string name="txt_dang_ky_thanh_cong">Đăng ký thành công</string>
    <string name="txt_nhap_day_du_du_lieu">Nhập đầy đủ dữ liệu</string>
</resources>
