<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:background="@color/cBlue5"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbar_chi_tiet_sp"
            app:navigationIcon="@drawable/ic_back_white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_chi_tiet_san_pham"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/d_20" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/d_20">

                <ImageView
                    android:id="@+id/iv_hinh_sp"
                    android:layout_width="@dimen/d_200"
                    android:layout_height="@dimen/d_200"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tv_ten_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_10"
                    android:text="Iphone 6s Plus..."
                    android:textColor="@color/cGray9"
                    android:textSize="@dimen/d_20" />

                <TextView
                    android:id="@+id/tv_gia_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_10"
                    android:text="7.000.000 đ"
                    android:textColor="@color/cGray9"
                    android:textSize="@dimen/d_22"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_mua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_10"
                    android:background="@color/cRedA4"
                    android:text="@string/txt_chon_mua"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_10"
                    android:text="@string/txt_mo_ta"
                    android:textColor="@color/cGray9"
                    android:textSize="@dimen/d_20"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_mo_ta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_10"
                    android:text="@string/app_name"
                    android:textSize="@dimen/d_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_10"
                    android:text="@string/txt_thong_tin_chi_tiet"
                    android:textColor="@color/cGray9"
                    android:textSize="@dimen/d_20"
                    android:textStyle="bold" />

                <TableLayout
                    android:id="@+id/tbl_thong_tin_chi_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_10">
                    <!--<TableRow-->
                        <!--android:padding="@dimen/d_5"-->
                        <!--android:weightSum="10">-->

                        <!--<TextView-->
                            <!--android:layout_weight="3"-->
                            <!--android:text="Tên thuộc tính" />-->

                        <!--<TextView-->
                            <!--android:layout_weight="7"-->
                            <!--android:text="Giá trị" />-->
                    <!--</TableRow>-->
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>