<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GioHangAct">
    <RelativeLayout
        android:background="@color/cBlue5"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbar_gio_hang"
            app:navigationIcon="@drawable/ic_back_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_gio_hang"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/d_20" />
    </RelativeLayout>


    <RelativeLayout
        android:padding="@dimen/d_20"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_gio_hang"
            android:layout_above="@+id/ln_tong_tien"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/ln_tong_tien"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/txt_thanh_tien"
                    android:textSize="@dimen/d_20"
                    android:textColor="@color/cGray9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_tong_tien"
                    android:text="10,000,000 đ"
                    android:textSize="@dimen/d_24"
                    android:textColor="@color/cRedA4"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow
                android:id="@+id/tbl_dieu_khien_gio_hang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/bt_cap_nhat"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/d_10"
                    android:text="@string/txt_cap_nhat"
                    android:textColor="@color/colorWhite"
                    android:background="@color/cRedA4"
                    android:textAllCaps="false"
                    android:textSize="@dimen/d_20"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/bt_thanh_toan"
                    android:layout_marginLeft="@dimen/d_10"
                    android:layout_weight="1"
                    android:text="@string/txt_thanh_toan"
                    android:textColor="@color/colorWhite"
                    android:background="@color/cRedA4"
                    android:textAllCaps="false"
                    android:textSize="@dimen/d_20"
                    android:layout_height="wrap_content" />
            </TableRow>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>